--- a/projeto-cordel/estilo/style.css
+++ b/projeto-cordel/estilo/style.css
@@ -53,6 +53,10 @@ section{
     font-size: 3.5vw;
 }
 
+section > p{
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -61,12 +65,29 @@ section.normal{
 section.imagem{
     background-color: rgb(51, 51, 51);
     color: white;
+    background-attachment: fixed;
+}
+
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-position: center right;
+    background-size: cover;
+    box-shadow: inset 5px 5px 12px 0px rgba(0, 0, 0, 0.548);
+}
+
+section#img02{
+    background-image: url(../imagens/background002.jpg);
+    background-position: center right;
+    background-size: cover;
+    box-shadow: inset 5px 5px 12px 0px rgba(0, 0, 0, 0.548);
+
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.185);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
 }
 
 footer{
