--- a/projeto-cordel/estilo/style.css
+++ b/projeto-cordel/estilo/style.css
@@ -29,8 +29,8 @@ header h1{
 
 header p{
     color: white;
-    font-family: "Passion One", cursive;
-    font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1em;
     padding-bottom: 50px;
     
 }
@@ -38,6 +38,7 @@ header p{
 header a {
     color: white;
     text-decoration: none;
+    font-weight: bolder;
 }
 
 header a:hover{
